...
            <objects>
                <viewController id="BYZ-38-t0r" customClass="ItunesViewController" customModule="ItunesArtist" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <searchBar contentMode="redraw" text="" placeholder="search artist" translatesAutoresizingMaskIntoConstraints="NO" id="bef-xQ-r6n">
                                <rect key="frame" x="0.0" y="44" width="414" height="56"/>
                                <textInputTraits key="textInputTraits"/>
                            </searchBar>
                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="sSV-WN-1Wf">
                                <rect key="frame" x="0.0" y="136" width="414" height="726"/>
                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                            </tableView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jnD-rw-eXb">
                                <rect key="frame" x="0.0" y="100" width="414" height="36"/>
                                <fontDescription key="fontDescription" style="UICTFontTextStyleTitle3"/>
                                <state key="normal" title="Search Artist"/>
                                <connections>
                                    <action selector="searchButtonAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="zK5-Em-Whg"/>
                                </connections>
                            </button>
                        </subviews>
                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
...
