...
    }
    
    private func configTableView() {
        tableView.delegate = self
        tableView.dataSource = self
        tableView.allowsSelection = false
        tableView.accessibilityIdentifier = "itunesTableView"
        tableView.register(UINib(nibName: "ItunesTableViewCell", bundle: nil), forCellReuseIdentifier: "itunesTableViewCell")
    }

    @IBAction func searchButtonAction(_ sender: Any) {
        guard let text = searchBar.text else { return }
        self.spinner.startAnimating()
...
